# docling-p

./: .gitignore  LICENSE  README.md  core.py  main.py  pyproject.toml  start.bat  start.sh  webapp.py
scripts/: migrate_markdowns.py
static/: app.js  index.html
