[project]
name = "docling-p"
version = "0.1.0"
description = "Convert PDF and office documents to Markdown with Docling"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "docling>=2.91.0",
    "fastapi>=0.115",
    "lxml>=4.9",
    "pypdf[crypto]>=6.10.2",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "sse-starlette>=2.1",
    "uvicorn[standard]>=0.32",
]
